apps/base/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    app.kubernetes.io/component: monitoring
    goldilocks.fairwinds.com/enabled: "true"
