apps/base/linkding/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-svc
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: linkding
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "linkding.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding-svc
                port:
                  name: http
  tls:
    - hosts:
        - "linkding.dimarco-server.site"
      secretName: linkding-tls
